--- a/CraftBukkit_v1_14_R1/pom.xml
+++ b/CraftBukkit_v1_14_R1/pom.xml
@@ -9,18 +9,8 @@
 	<artifactId>CraftBukkit_v1_14_R1</artifactId>
 	<version>1.0</version>
 
-	<!-- <dependencies>
-		<dependency>
-		<groupId>remvn</groupId>
-		<artifactId>craftbukkit</artifactId>
-		<version>1.0</version>
-		<scope>system</scope>
-		<systemPath>${project.basedir}/src/main/resources/craftbukkit-1.12.2.jar</systemPath>
-		</dependency>
-		</dependencies> -->
-
 	<build>
-		<finalName>${project.artifactId}-${project.version}</finalName>
+		<finalName>${project.artifactId}</finalName>
 		<!-- Resources -->
 		<resources>
 			<resource>
@@ -52,38 +42,6 @@
 								</resource>
 							</resources>
 						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.2.0</version>
-				<configuration>
-					<excludes>
-						<exclude>**/*.jar</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.1.0</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
 					</execution>
 				</executions>
 			</plugin>
