--- a/CraftBukkit_v1_14_R1/pom.xml
+++ b/CraftBukkit_v1_14_R1/pom.xml
@@ -9,6 +9,11 @@
 	<artifactId>CraftBukkit_v1_14_R1</artifactId>
 	<version>1.0</version>
 
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+
 	<build>
 		<finalName>${project.artifactId}</finalName>
 		<!-- Resources -->
