--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@ target
 /NMSLibrary_API/.settings
 /NMSLibrary_Plugin/.settings
 /NMSLibrary_v1_14_R1/.settings
+/CraftBukkit_v1_12_R1/.settings
+/CraftBukkit_v1_14_R1/.settings
